--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -1,3 +1,15 @@
+<!-- *****************************************
+
+sirsirington147
+  front end nano degree project1
+  -after 3 attemps using the flex box than bootstrap v3 for some horrible reason i
+    was using a tutorial for 3 instead of 4
+    finally i moved to 4 and relized how much of a time saver it was.
+  attributes
+  all work done here was with the help of udacity frontend nanodegree and
+  w3schools bootstrap4 tutorials https://www.w3schools.com/bootstrap4/bootstrap_icons.asp
+****************************************** -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,9 +46,6 @@
           </ul>
 
         </nav>
-
-
-
 
 </div>
 
