--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -17,7 +17,7 @@ sirsirington147
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -31,7 +31,7 @@ sirsirington147
     <h3><small>Tech Development for the Future</small></h3>
       <nav class="navbar navbar-expand-sm bg-light navbar-light">
         <a class="navbar-brand" href="#">
-          <img src="whiteLogo.png" alt="Logo" style="width:150px;">
+          <img src="img/whiteLogo.png" alt="Logo" width="150px">
         </a>
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -58,17 +58,17 @@ sirsirington147
 
 
     <div class="card">
-      <img class="card-img-top" src="attLogo.png" alt="Card image">
+      <img class="card-img-top image-fluid" src="img/attLogo.png" alt="attLogo">
         <div class="card-body">
           <h4 class="card-title">Tech Dev</h4>
-          <p class="card-text">SWork with amazing groups like direct tv and HBO</p>
+          <p class="card-text">Be on the cutting edge of Tech</p>
           <a href="#" class="btn btn-primary">Apply</a>
         </div>
     </div>
 
 
-    <div class="card" >
-      <img class="card-img-top" src="GameOfThrones.jpg" alt="Card image">
+    <div class="card">
+      <img class="card-img-top image-fluid" src="img/GameOfThrones.jpg" alt="GameOfThrones">
         <div class="card-body">
           <h4 class="card-title">Entertainment</h4>
           <p class="card-text">SWork with amazing groups like direct tv and HBO</p>
@@ -76,8 +76,8 @@ sirsirington147
         </div>
     </div>
 
-    <div class="card" >
-      <img class="card-img-top" src="network.jpeg" alt="Card image">
+    <div id= thirds class="card" >
+      <img class="card-img-top image-fluid" src="img/network.jpeg" alt="Network Engineer">
         <div class="card-body">
           <h4 class="card-title">Network Engineer</h4>
           <p class="card-text">Design the Network of the Future</p>
