--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -9,81 +9,65 @@ sirsirington147
   all work done here was with the help of udacity frontend nanodegree and
   w3schools bootstrap4 tutorials https://www.w3schools.com/bootstrap4/bootstrap_icons.asp
 ****************************************** -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>att TDP portal</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<title>att TDP portal</title>
+	<meta charset="utf-8">
+	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
+	</script>
 </head>
 <body>
-
-<div class="jumbotron text-center">
-
-
-  <h1>TDP Program</h1>
-    <h3><small>Tech Development for the Future</small></h3>
-      <nav class="navbar navbar-expand-sm bg-light navbar-light">
-        <a class="navbar-brand" href="#">
-          <img src="img/whiteLogo.png" alt="Logo" width="150px">
-        </a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Status</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Jobs</a>
-            </li>
-          </ul>
-
-        </nav>
-
-</div>
-
-<div class="well">
-<h4>AT&T has some of the most satisfying and interesting career oppurtunities</h4>
-</div>
-
-
-<div class="card-deck">
-
-
-    <div class="card">
-      <img class="card-img-top image-fluid" src="img/attLogo.png" alt="attLogo">
-        <div class="card-body">
-          <h4 class="card-title">Tech Dev</h4>
-          <p class="card-text">Be on the cutting edge of Tech</p>
-          <a href="#" class="btn btn-primary">Apply</a>
-        </div>
-    </div>
-
-
-    <div class="card">
-      <img class="card-img-top image-fluid" src="img/GameOfThrones.jpg" alt="GameOfThrones">
-        <div class="card-body">
-          <h4 class="card-title">Entertainment</h4>
-          <p class="card-text">SWork with amazing groups like direct tv and HBO</p>
-          <a href="#" class="btn btn-primary">Apply</a>
-        </div>
-    </div>
-
-    <div id= thirds class="card" >
-      <img class="card-img-top image-fluid" src="img/network.jpeg" alt="Network Engineer">
-        <div class="card-body">
-          <h4 class="card-title">Network Engineer</h4>
-          <p class="card-text">Design the Network of the Future</p>
-          <a href="#" class="btn btn-primary">Apply</a>
-        </div>
-      </div>
-</div>
+	<div class="jumbotron text-center">
+		<h1>TDP Program</h1>
+		<h3><small>Tech Development for the Future</small></h3>
+		<nav class="navbar navbar-expand-sm bg-light navbar-light">
+			<a class="navbar-brand" href="#"><img alt="Logo" src="img/whiteLogo.png" width="150px"></a>
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Resume</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Status</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Jobs</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
+	<div class="well">
+		<h4>AT&T has some of the most satisfying and interesting career oppurtunities</h4>
+	</div>
+	<div class="card-deck">
+		<div class="card">
+			<img alt="attLogo" class="card-img-top image-fluid" src="img/attLogo.png">
+			<div class="card-body">
+				<h4 class="card-title">Tech Dev</h4>
+				<p class="card-text">Be on the cutting edge of Tech</p><a class="btn btn-primary" href="#">Apply</a>
+			</div>
+		</div>
+		<div class="card">
+			<img alt="GameOfThrones" class="card-img-top image-fluid" src="img/GameOfThrones.jpg">
+			<div class="card-body">
+				<h4 class="card-title">Entertainment</h4>
+				<p class="card-text">SWork with amazing groups like direct tv and HBO</p><a class="btn btn-primary" href="#">Apply</a>
+			</div>
+		</div>
+		<div class="card" id="thirds">
+			<img alt="Network Engineer" class="card-img-top image-fluid" src="img/network.jpeg">
+			<div class="card-body">
+				<h4 class="card-title">Network Engineer</h4>
+				<p class="card-text">Design the Network of the Future</p><a class="btn btn-primary" href="#">Apply</a>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
